[gd_scene load_steps=56 format=3 uid="uid://de7g4fgm4pi0q"]

[ext_resource type="PackedScene" uid="uid://c0vkinwfe80j8" path="res://assets/meshes/nature/tree2.glb" id="1_3kjtq"]
[ext_resource type="Script" uid="uid://cybdvsu18ydcq" path="res://scenes/globals.gd" id="1_nj174"]
[ext_resource type="PackedScene" uid="uid://b7qn6xloeiohu" path="res://assets/meshes/nature/bush1.glb" id="2_s11ye"]
[ext_resource type="PackedScene" uid="uid://xvm1r526jfod" path="res://assets/meshes/nature/tree3.glb" id="3_p8gp8"]
[ext_resource type="Texture2D" uid="uid://btck3st2a2uhi" path="res://assets/textures/grass_mix_d.dds" id="4_p8gp8"]
[ext_resource type="Texture2D" uid="uid://bxp8wwnik1y26" path="res://assets/textures/grass_mix_n.dds" id="5_hmgqj"]
[ext_resource type="Texture2D" uid="uid://ce5lbwsqkeod5" path="res://assets/textures/billboard/grass_green1.dds" id="5_kq7m5"]
[ext_resource type="Texture2D" uid="uid://ddh08260rk4o4" path="res://assets/textures/billboard/wheat_d.dds" id="6_kq7m5"]
[ext_resource type="Texture2D" uid="uid://dm0hetls2gfk4" path="res://assets/textures/desert_mud_d.dds" id="6_vdtib"]
[ext_resource type="Texture2D" uid="uid://qh5bnmda7yqr" path="res://assets/textures/desert_mud_n.dds" id="7_em2l6"]
[ext_resource type="Texture2D" uid="uid://dvkrjqdpxlmv8" path="res://assets/textures/riverbed.jpg" id="7_jtla5"]
[ext_resource type="Texture2D" uid="uid://dg8xpmlbpn16m" path="res://assets/textures/billboard/wheat_n.dds" id="7_nj174"]
[ext_resource type="Texture2D" uid="uid://mucqv6eydo55" path="res://assets/textures/riverbed_jpg.png" id="8_82i1w"]
[ext_resource type="Texture2D" uid="uid://cqcef5m6nxqal" path="res://assets/textures/grass_ground_d.dds" id="8_stk68"]
[ext_resource type="Texture2D" uid="uid://calee8fx0hf8m" path="res://assets/textures/grass_ground_n.dds" id="9_u6qkf"]
[ext_resource type="Texture2D" uid="uid://be4siifsg0buk" path="res://assets/textures/evening_road_01_puresky_2k.exr" id="11_ux8bc"]
[ext_resource type="Script" uid="uid://0ou2op0l50qf" path="res://addons/Basic FPS Player/Src/basic_player_startup.gd" id="12_p8gp8"]
[ext_resource type="PackedScene" uid="uid://kmyakts4l64t" path="res://addons/Basic FPS Player/Src/basic_player_head.tscn" id="13_hmgqj"]
[ext_resource type="Texture2D" uid="uid://cdeqsft06i30h" path="res://assets/textures/sand_trail_d.dds" id="14_lhsit"]
[ext_resource type="Script" uid="uid://d351uiai28hdv" path="res://scenes/scripts/services/town_loader.gd" id="15_kq7m5"]
[ext_resource type="Script" uid="uid://dks5gu537djg2" path="res://scenes/scripts/services/rail_loader.gd" id="15_nj174"]
[ext_resource type="Texture2D" uid="uid://wqu8c0ufiheg" path="res://assets/textures/sand_trail_n.dds" id="15_usal5"]
[ext_resource type="Texture2D" uid="uid://b2paoh1c36yfu" path="res://assets/textures/grass_darker_d.dds" id="16_mg4js"]
[ext_resource type="Texture2D" uid="uid://fybuf27ahpae" path="res://assets/textures/grass_darker_n.dds" id="17_c2xmk"]
[ext_resource type="Script" uid="uid://dgircfhdm4xsv" path="res://scenes/scripts/player_pos_label.gd" id="17_stk68"]
[ext_resource type="ArrayMesh" uid="uid://c4lsqrukhf224" path="res://assets/meshes/structures/rathaus/rathaus.obj" id="21_usal5"]
[ext_resource type="Script" uid="uid://cr2oyr6h3rrlr" path="res://scenes/scripts/services/editor/editor_object_container.gd" id="26_c2xmk"]

[sub_resource type="Gradient" id="Gradient_gse23"]
offsets = PackedFloat32Array(0.2, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_a0gsm"]
noise_type = 2
frequency = 0.03
cellular_jitter = 3.0
cellular_return_type = 0
domain_warp_enabled = true
domain_warp_type = 1
domain_warp_amplitude = 50.0
domain_warp_fractal_type = 2
domain_warp_fractal_lacunarity = 1.5
domain_warp_fractal_gain = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_p0jcd"]
seamless = true
color_ramp = SubResource("Gradient_gse23")
noise = SubResource("FastNoiseLite_a0gsm")

[sub_resource type="Terrain3DMaterial" id="Terrain3DMaterial_b5k2k"]
_shader_parameters = {
&"bias_distance": 512.0,
&"blend_sharpness": 0.792,
&"depth_blur": 0.0,
&"enable_macro_variation": true,
&"enable_projection": true,
&"height_blending": false,
&"macro_variation1": Color(1, 1, 1, 1),
&"macro_variation2": Color(1, 1, 1, 1),
&"macro_variation_slope": 0.333,
&"mipmap_bias": 0.72,
&"noise1_angle": 0.0,
&"noise1_offset": Vector2(0.5, 0.5),
&"noise1_scale": 0.04,
&"noise2_scale": 0.076,
&"noise3_scale": 0.225,
&"noise_texture": SubResource("NoiseTexture2D_p0jcd"),
&"projection_angular_division": 2.0,
&"projection_threshold": 0.75,
&"world_space_normal_blend": false
}
world_background = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ux8bc"]
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
backlight_enabled = true
backlight = Color(0.5, 0.5, 0.5, 1)
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_82i1w"]
name = "grassMesh"
enabled = false
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_ux8bc")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_hmgqj"]
name = "tree2"
id = 1
scene_file = ExtResource("1_3kjtq")
density = 0.0329875
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_vdtib"]
name = "bush1"
id = 2
scene_file = ExtResource("2_s11ye")
density = 7.57365
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_em2l6"]
name = "bush1"
id = 3
scene_file = ExtResource("3_p8gp8")
density = 0.026359
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nj174"]
cull_mode = 2
shading_mode = 0
albedo_texture = ExtResource("5_kq7m5")
uv1_scale = Vector3(1, 0.9, 1)
texture_filter = 2
billboard_keep_scale = true
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_kq7m5"]
name = "Grass1"
id = 4
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_nj174")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lhsit"]
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("6_kq7m5")
normal_enabled = true
normal_texture = ExtResource("7_nj174")
backlight_enabled = true
backlight = Color(0.5, 0.5, 0.5, 1)
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_usal5"]
id = 5
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_lhsit")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_rptdf"]
name = "grass_mix_d"
albedo_texture = ExtResource("4_p8gp8")
normal_texture = ExtResource("5_hmgqj")
normal_depth = 0.47
ao_strength = 0.579
roughness = 0.267
uv_scale = 0.3
detiling_rotation = 0.395

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_3kjtq"]
name = "desert_mud_d"
id = 1
albedo_texture = ExtResource("6_vdtib")
normal_texture = ExtResource("7_em2l6")
uv_scale = 0.5
detiling_rotation = 0.149

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_s11ye"]
name = "grass_ground_d"
id = 2
albedo_texture = ExtResource("8_stk68")
normal_texture = ExtResource("9_u6qkf")
ao_strength = 0.1
uv_scale = 0.5

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_vf50h"]
name = "sand_trail_d"
id = 3
albedo_texture = ExtResource("14_lhsit")
normal_texture = ExtResource("15_usal5")
roughness = 0.743
uv_scale = 0.98
detiling_rotation = 0.119

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_ekgs8"]
name = "grass_darker_d"
id = 4
albedo_texture = ExtResource("16_mg4js")
normal_texture = ExtResource("17_c2xmk")
normal_depth = 1.283
ao_strength = 0.767
roughness = 0.495
uv_scale = 0.2
detiling_rotation = 0.307

[sub_resource type="Terrain3DAssets" id="Terrain3DAssets_3kjtq"]
mesh_list = Array[Terrain3DMeshAsset]([SubResource("Terrain3DMeshAsset_82i1w"), SubResource("Terrain3DMeshAsset_hmgqj"), SubResource("Terrain3DMeshAsset_vdtib"), SubResource("Terrain3DMeshAsset_em2l6"), SubResource("Terrain3DMeshAsset_kq7m5"), SubResource("Terrain3DMeshAsset_usal5")])
texture_list = Array[Terrain3DTextureAsset]([SubResource("Terrain3DTextureAsset_rptdf"), SubResource("Terrain3DTextureAsset_3kjtq"), SubResource("Terrain3DTextureAsset_s11ye"), SubResource("Terrain3DTextureAsset_vf50h"), SubResource("Terrain3DTextureAsset_ekgs8")])

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_kq7m5"]
panorama = ExtResource("11_ux8bc")

[sub_resource type="Sky" id="Sky_u6qkf"]
sky_material = SubResource("PanoramaSkyMaterial_kq7m5")

[sub_resource type="Environment" id="Environment_p8gp8"]
background_mode = 2
sky = SubResource("Sky_u6qkf")
reflected_light_source = 2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_hmgqj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rptdf"]
albedo_texture = ExtResource("7_jtla5")
metallic = 0.64
metallic_specular = 1.0
roughness = 0.0
normal_enabled = true
normal_texture = ExtResource("8_82i1w")
uv1_scale = Vector3(120, 120, 120)
uv2_scale = Vector3(50, 50, 50)

[sub_resource type="PlaneMesh" id="PlaneMesh_s11ye"]
size = Vector2(2600, 2600)

[sub_resource type="SphereShape3D" id="SphereShape3D_vdtib"]

[sub_resource type="Curve3D" id="Curve3D_c2xmk"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -60.583, 20, 0.019, 0, 0, 0, 0, 0, 0, 97.226, 10, 54, 0, 0, 0, 0, 0, 0, 129.1, 21.5, 66, 0, 0, 0, 0, 0, 0, 175.65, 21, 72.692, 0, 0, 0, 0, 0, 0, 207, 18.5, 93, 0, 0, 0, 0, 0, 0, 284, 18, 141.6, 0, 0, 0, 0, 0, 0, 342.868, 19, 166.583, 0, 0, 0, 0, 0, 0, 431, 18, 193, 0, 0, 0, 0, 0, 0, 485.323, 17, 210.261, 0, 0, 0, 0, 0, 0, 619, 16, 304, 0, 0, 0, 0, 0, 0, 655.41, 15, 329.195, 0, 0, 0, 0, 0, 0, 677.1, 16, 348, 0, 0, 0, 0, 0, 0, 725.1, 16.5, 375, 0, 0, 0, 0, 0, 0, 829.9, 14, 470.2, 0, 0, 0, 0, 0, 0, 884.5, 14.5, 508.2, 0, 0, 0, 0, 0, 0, 930.4, 14.5, 538.5, 0, 0, 0, 0, 0, 0, 980.8, 15.5, 548.4, 0, 0, 0, 0, 0, 0, 1015.7, 16.5, 536.4, 0, 0, 0, 0, 0, 0, 1151.7, 16, 537.6, 0, 0, 0, 0, 0, 0, 1277.6, 16.5, 518, 0, 0, 0, 0, 0, 0, 1397.4, 16, 557.6, 0, 0, 0, 0, 0, 0, 1447.9, 15.5, 577.3, 0, 0, 0, 0, 0, 0, 1623.06, 15, 622.35, 0, 0, 0, 0, 0, 0, 1731.5, 15, 643, 0, 0, 0, 0, 0, 0, 2032.78, 15, 651.297),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 25

[sub_resource type="Curve3D" id="Curve3D_ekgs8"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 677.1, 16, 348, 0, 0, 0, 0, 0, 0, 673.5, 17, 379, 0, 0, 0, 0, 0, 0, 673.1, 15, 406.5, 0, 0, 0, 0, 0, 0, 657, 13, 442.6, 0, 0, 0, 0, 0, 0, 656.7, 14, 467, 0, 0, 0, 0, 0, 0, 646.8, 15, 539.4, 0, 0, 0, 0, 0, 0, 619.5, 14, 574.4, 0, 0, 0, 0, 0, 0, 613.4, 14, 600.2, 0, 0, 0, 0, 0, 0, 601.3, 13.5, 655.7, 0, 0, 0, 0, 0, 0, 602.9, 13.5, 699.1, 0, 0, 0, 0, 0, 0, 628.7, 11, 739.8, 0, 0, 0, 0, 0, 0, 645.1, 10, 777.7, 0, 0, 0, 0, 0, 0, 659.5, 12.5, 809.7, 0, 0, 0, 0, 0, 0, 678.5, 11.5, 858.6, 0, 0, 0, 0, 0, 0, 761.3, 11, 893.4, 0, 0, 0, 0, 0, 0, 806.2, 10, 923.8, 0, 0, 0, 0, 0, 0, 876.5, 10.5, 949.5, 0, 0, 0, 0, 0, 0, 904.3, 10, 957.9, 0, 0, 0, 0, 0, 0, 937.3, 11.5, 957.9, 0, 0, 0, 0, 0, 0, 958.9, 10.5, 966.1, 0, 0, 0, 0, 0, 0, 997.9, 9.5, 996.7, 0, 0, 0, 0, 0, 0, 1021, 10, 1036.8, 0, 0, 0, 0, 0, 0, 1057.3, 10, 1079.5, 0, 0, 0, 0, 0, 0, 1129.1, 10.5, 1145.8, 0, 0, 0, 0, 0, 0, 1231.5, 12, 1226.5, 0, 0, 0, 0, 0, 0, 1341.9, 11, 1302.1, 0, 0, 0, 0, 0, 0, 1399.3, 10, 1343.8, 0, 0, 0, 0, 0, 0, 1432.1, 10, 1374.3, 0, 0, 0, 0, 0, 0, 1441.1, 10, 1421.3),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 29

[node name="Scene" type="Node3D"]

[node name="World" type="Node3D" parent="."]

[node name="Globals" type="Node" parent="World"]
script = ExtResource("1_nj174")

[node name="Terrain" type="Node3D" parent="World"]

[node name="WorldTerrain" type="Terrain3D" parent="World/Terrain"]
data_directory = "res://world/heightdata"
material = SubResource("Terrain3DMaterial_b5k2k")
assets = SubResource("Terrain3DAssets_3kjtq")
save_16_bit = true
vertex_spacing = 2.0
unique_name_in_owner = true
top_level = true
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="World/Terrain/WorldTerrain"]
environment = SubResource("Environment_p8gp8")
camera_attributes = SubResource("CameraAttributesPractical_hmgqj")

[node name="Water" type="MeshInstance3D" parent="World/Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1253.03, 7.32169, 1218.33)
material_override = SubResource("StandardMaterial3D_rptdf")
mesh = SubResource("PlaneMesh_s11ye")
skeleton = NodePath("../..")

[node name="Static" type="Node3D" parent="World"]

[node name="Towns" type="Node3D" parent="World/Static" node_paths=PackedStringArray("towns")]
unique_name_in_owner = true
editor_description = "Town-Centers with Label3D above will be spawned under this node"
script = ExtResource("15_kq7m5")
towns = [null, null, null, null, null, null, null, null, null, null, null, null, null, null]

[node name="Rails" type="Node3D" parent="World/Static"]

[node name="RailBuilder" type="Node3D" parent="World/Static/Rails"]
script = ExtResource("15_nj174")

[node name="Deco" type="Node3D" parent="World/Static"]

[node name="RathausTribsees" type="MeshInstance3D" parent="World/Static/Deco"]
transform = Transform3D(0.174312, 0, 1.99239, 0, 2, 0, -1.99239, 0, 0.174312, 226.49, 7.5, 855.218)
mesh = ExtResource("21_usal5")

[node name="Player" type="CharacterBody3D" parent="World"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 535.646, 15.6309, 570.467)
script = ExtResource("12_p8gp8")
metadata/_custom_type_script = "uid://0ou2op0l50qf"

[node name="Head" parent="World/Player" instance=ExtResource("13_hmgqj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.54172, 0)

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="World/Player"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 1.53713, 0)
shape = SubResource("SphereShape3D_vdtib")

[node name="InEditor" type="Node3D" parent="World"]
script = ExtResource("26_c2xmk")

[node name="EditorLabels" type="Node3D" parent="World/InEditor"]
editor_description = "generated town labels will spawn here"

[node name="EditorLabel_Town_Tribsees" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 232, 22.7266, 870)
pixel_size = 0.33
billboard = 1
text = "Tribsees"

[node name="EditorLabel_Town_Drechow" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 675, 29.0645, 565)
pixel_size = 0.33
billboard = 1
text = "Drechow"

[node name="EditorLabel_Town_Zarrentin" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1160, 25.7969, 962)
pixel_size = 0.33
billboard = 1
text = "Zarrentin"

[node name="EditorLabel_Town_Nehringen" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 910, 23.5312, 1529)
pixel_size = 0.33
billboard = 1
text = "Nehringen"

[node name="EditorLabel_Town_Hohenbarnekow" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1295, 30.1621, 535)
pixel_size = 0.33
billboard = 1
text = "Hohenbarnekow"

[node name="EditorLabel_Town_Finkethal" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 409, 38.1875, 1958)
pixel_size = 0.33
billboard = 1
text = "Finkethal"

[node name="EditorLabel_Town_Leyerhof" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2045, 28.8594, 898)
pixel_size = 0.33
billboard = 1
text = "Leyerhof"

[node name="EditorLabel_Town_Glewitz" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1303, 24.5938, 1312)
pixel_size = 0.33
billboard = 1
text = "Glewitz"

[node name="EditorLabel_Town_Abtshagen" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1889.31, 35.8652, 173.57)
pixel_size = 0.33
billboard = 1
text = "Abtshagen"

[node name="EditorLabel_Town_Gnoien" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 115.094, 29.8827, 1740.35)
pixel_size = 0.33
billboard = 1
text = "Gnoien"

[node name="EditorLabel_Town_Demmin" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2473.31, 29.6641, 2170.44)
pixel_size = 0.33
billboard = 1
text = "Demmin"

[node name="EditorLabel_Town_Grimmen" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2236.61, 24.3281, 634.85)
pixel_size = 0.33
billboard = 1
text = "Grimmen"

[node name="EditorLabel_Town_Dargun" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1212.07, 25.0409, 2178.45)
pixel_size = 0.33
billboard = 1
text = "Dargun"

[node name="EditorLabel_Town_Nossendorf" type="Label3D" parent="World/InEditor/EditorLabels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1771.67, 27.6773, 1767.4)
pixel_size = 0.33
billboard = 1
text = "Nossendorf"

[node name="EditorInfr" type="Node3D" parent="World/InEditor"]

[node name="@Path3D@25648" type="Path3D" parent="World/InEditor/EditorInfr"]
curve = SubResource("Curve3D_c2xmk")

[node name="@Path3D@25649" type="Path3D" parent="World/InEditor/EditorInfr"]
curve = SubResource("Curve3D_ekgs8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.933693, 0.276482, -0.227542, 0.227291, 0.0334054, 0.973254, 0.276688, -0.960439, -0.0316515, 1436.37, 452.369, 745.732)
light_energy = 1.2
light_specular = 0.531
shadow_enabled = true

[node name="GameWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 644.0

[node name="PosLabel" type="Label" parent="GameWindow"]
layout_mode = 0
offset_left = 21.0
offset_top = 11.0
offset_right = 104.0
offset_bottom = 34.0
text = "Test"
horizontal_alignment = 1
script = ExtResource("17_stk68")

[node name="UiUpdateTimer" type="Timer" parent="GameWindow"]
autostart = true

[node name="Locator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 680, 17, 866)

[connection signal="ready" from="." to="World/Static/Towns" method="_on_scene_ready"]
[connection signal="ready" from="." to="World/Static/Rails/RailBuilder" method="_on_scene_ready"]
[connection signal="ready" from="World/Terrain" to="World/Static/Rails/RailBuilder" method="_on_terrain_ready"]
[connection signal="timeout" from="GameWindow/UiUpdateTimer" to="GameWindow/PosLabel" method="_on_ui_update_timer_timeout"]
